[package]
name = "async-echo"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3"
async-std = "1"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
